# mcp_server_image_selector

./: .flake8  =1.23.0  PDF_USAGE.md  README.md  claude_desktop_config.json  example_standalone.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/mcp_server_image_selector/: __init__.py  export.py  gui.py  pdf_utils.py  server.py  utils.py
tests/: test_export.py  test_export_errors.py  test_gui.py  test_helpers_new.py  test_pdf.py  test_rotation.py  test_server.py  test_server_helpers.py  test_utils.py
